# analyze-prompt-intent

./: .gitignore  LICENSE  README.md  analyze_prompt.py  pyproject.toml  run.sh
scripts/: run.sh
src/analyzer/: __init__.py  cli.py  config.py  conversation.py  deobfuscation.py  llm.py  models.py  rules.py
tests/: __init__.py
tests/fixtures/conversations/: conversation_academic_disguise.jsonl  conversation_creative_excuse.jsonl  conversation_crescendo_misinformation.jsonl  conversation_crescendo_misinformation_teacher.jsonl  conversation_cybersecurity_escalation.jsonl  conversation_direct_hostile.jsonl  conversation_escalation_harassment.jsonl  conversation_mental_health_crisis.jsonl  conversation_obfuscation_multiple.jsonl  conversation_payload_splitting_coding.jsonl  conversation_prompt_injection_dan_variations.jsonl  conversation_safe_educational.jsonl  conversation_safe_escalation_security.jsonl  conversation_safe_technical.jsonl  conversation_topic_drift_benign.jsonl
tests/fixtures/prompts/: prompt_academic_disguise.txt  prompt_adversarial_suffix.txt  prompt_harmful_chemistry.txt  prompt_harmful_extremism.txt  prompt_harmful_harassment.txt  prompt_harmful_self_harm.txt  prompt_injection_reveal_instructions.txt  prompt_injection_system_override.txt  prompt_jailbreak_dan.txt  prompt_jailbreak_pretend.txt  prompt_jailbreak_roleplay.txt  prompt_obfuscated_base64.txt  prompt_obfuscated_hex_exploit.txt  prompt_obfuscated_leetspeak.txt  prompt_obfuscated_rot13.txt  prompt_obfuscated_unicode.txt  (+10 more)
tests/integration/: run_test.sh  test_results.json
