[tool.poetry]
name = "analyze-prompt-intent"
version = "2.0.0"
description = "Advanced jailbreak/prompt-injection detector with Ollama integration, deobfuscation, ensemble mode, and Llama Guard 3 support"
authors = ["Aaron Sweeney <ajsween@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "analyzer", from = "src"}]
package-mode = true

[tool.poetry.scripts]
analyze-prompt = "analyzer.cli:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
